...
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnroomfinderProfile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/profile"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
...
